--- a/java-example/build.gradle
+++ b/java-example/build.gradle
@@ -12,5 +12,10 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.seleniumhq.selenium:selenium-java:3.8.1'
+    testCompile group: 'org.testng', name: 'testng', version: '6.14.2'
+}
 
+
+test {
+    maxParallelForks = 5
 }
